--- a/one/templates/layout/partials/header-layout/header/_menu/_menu.html
+++ b/one/templates/layout/partials/header-layout/header/_menu/_menu.html
@@ -5,9 +5,10 @@
      data-kt-drawer-toggle="#kt_app_header_menu_toggle" data-kt-swapper="true"
      data-kt-swapper-mode="{default: 'append', lg: 'prepend'}"
      data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
-{#  <!--begin::Menu-->#}
-{#  <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0"#}
-{#       id="kt_app_header_menu" data-kt-menu="true">#}
+  <!--begin::Menu-->
+  <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0"
+       id="kt_app_header_menu" data-kt-menu="true">
+{#    {% if user.is_superuser %}#}
 {#    <!--begin:Menu item-->#}
 {#    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"#}
 {#         class="menu-item here show menu-lg-down-accordion menu-here-bg me-0 me-lg-2">#}
@@ -24,6 +25,7 @@
 {#      <!--end:Menu sub-->#}
 {#    </div>#}
 {#    <!--end:Menu item-->#}
+{#    {% endif %}#}
 {#    <!--begin:Menu item-->#}
 {#    <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start"#}
 {#         class="menu-item menu-lg-down-accordion me-0 me-lg-2">#}
@@ -1252,7 +1254,7 @@
 {#      <!--end:Menu sub-->#}
 {#    </div>#}
 {#    <!--end:Menu item-->#}
-{#  </div>#}
-{#  <!--end::Menu-->#}
+  </div>
+  <!--end::Menu-->
 </div>
 <!--end::Menu wrapper-->
