update class missing

--- a/one/users/templates/users/user_detail.html
+++ b/one/users/templates/users/user_detail.html
@@ -278,7 +278,7 @@
                            type="password" placeholder="" name="password1"
                            autocomplete="off" id="id_password1"/>
                     <span
-                      class="btn btn-sm btn-icon position-absolute trans-middle top-50 end-0 me-n2"
+                      class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2"
                       data-kt-password-meter-control="visibility">
                       <i class="bi bi-eye-slash fs-2"></i>
                       <i class="bi bi-eye fs-2 d-none"></i>
