--- a/one/templates/partials/drawers/user-menu.html
+++ b/one/templates/partials/drawers/user-menu.html
@@ -2,7 +2,7 @@
 <div id="kt_drawer_user_menu" class="bg-body" data-kt-drawer="true" data-kt-drawer-name="user-menu"
      data-kt-drawer-activate="true"
      data-kt-drawer-overlay="true" data-kt-drawer-width="{default:'300px', 'md': '500px'}"
-     data- kt-drawer-direction="end"
+     data-kt-drawer-direction="end"
      data-kt-drawer-toggle="#kt_drawer_user_menu_toggle" data-kt-drawer-close="#kt_drawer_user_menu_close">
   <!--begin::Messenger-->
   <div class="card w-100 rounded-0 border-0" id="kt_drawer_user_menu">
@@ -14,8 +14,15 @@
         <div class="menu-item">
           <div class="menu-content d-flex align-items-center px-3">
             <!--begin::Avatar-->
-            <div class="symbol symbol-75px me-5">
-              <img alt="Logo" src="{% static 'media/avatars/300-1.jpg' %}"/>
+            <div class="me-7 mb-4">
+              <div class="symbol symbol-75px symbol-lg-120px symbol-fixed position-relative">
+                {% if user.avatar %}
+                  <img src="{{ user.avatar.url }}" alt="avatar">
+                {% else %}
+                  <img src="{% static 'media/avatars/300-1.jpg' %}" alt="avatar">
+                {% endif %}
+                {{ user.is_online_dot|safe }}
+              </div>
             </div>
             <!--end::Avatar-->
             <!--begin::Username-->
@@ -45,15 +52,127 @@
     </div>
     <!--end::Card header-->
     <!--begin::Card body-->
-    <div class="card-body" id="kt_drawer_user_menu_body">
-      <!--begin::Messages-->
-      <div class="scroll-y me-n5 pe-5" data-kt-element="messages" data-kt-scroll="true"
-           data-kt-scroll-activate="true" data-kt-scroll-height="auto"
-           data-kt-scroll-dependencies="#kt_drawer_user_menu_header"
-           data-kt-scroll-wrappers="#kt_drawer_user_menu_body" data-kt-scroll-offset="0px">
+    <div class="card-body p-5" id="kt_drawer_user_menu_body">
+      <!--begin::Profile-->
+      <div
+        class="card notice d-flex bg-light-primary rounded border-primary border border-dashed flex-shrink-0 p-3 mb-5">
+        <div class="row">
+          <div class="col-6">
+            <a href="{% url 'users:detail' user.username %}"
+               class="btn btn-link btn-active-color-primary">
+              {% get_svg_icon 'duotune/communication/com013.svg' 'svg-icon svg-icon-3' %}
+              {% translate "My Profile" %}</a>
+          </div>
+          <div class="col-6">
+            <a href="{% url 'account_logout' %}"
+               class="btn btn-link btn-color-danger btn-active-color-primary">
+              {% get_svg_icon 'duotune/arrows/arr076.svg' 'svg-icon svg-icon-3' %}
+              {% trans 'Sign Out' %}</a>
+          </div>
+        </div>
+      </div>
+      <!--end::Profile-->
+
+      <!--begin::Personal Settings-->
+      <div
+        class="card notice d-flex bg-light-primary rounded border-primary border border-dashed flex-shrink-0 p-3 mb-5">
+        <div class="card-title">
+          {% trans 'Personal Settings' %}
+        </div>
+        <!--begin::Toggle-->
+        <button class="btn btn-flex btn-link rotate" data-kt-menu-trigger="hover" data-kt-menu-placement="bottom-start"
+                data-kt-menu-offset="0px, 0px">
+          {% get_current_language as LANGUAGE_CODE %}
+          {% if LANGUAGE_CODE == 'en' %}
+            <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+                 src="{% static 'media/flags/united-states.svg' %}" alt=""/>
+            <span data-kt-element="current-lang-name" class="me-2">{% translate 'English' %}</span>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
+            {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
+            <!--end::Svg Icon-->
+          {% else %}
+            <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+                 src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
+            <span data-kt-element="current-lang-name" class="me-2">{% translate 'Vietnamese' %}</span>
+            <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
+            {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
+            <!--end::Svg Icon-->
+          {% endif %}
+        </button>
+        <!--end::Toggle-->
+        <!--begin::Menu-->
+        <div
+          class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-200px py-4"
+          data-kt-menu="true" id="kt_auth_lang_menu">
+          <!--begin::Menu item-->
+          <div class="menu-item px-3">
+            <a href="#" class="menu-link d-flex px-5" data-kt-lang="English" onclick="submitChangeLanguageForm('en');">
+            <span class="symbol symbol-20px me-4">
+              <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/united-states.svg' %}"
+                   alt=""/>
+            </span>
+              <span data-kt-element="lang-name">{% translate 'English' %}</span>
+            </a>
+          </div>
+          <!--end::Menu item-->
+          <!--begin::Menu item-->
+          <div class="menu-item px-3">
+            <a href="#" class="menu-link d-flex px-5" data-kt-lang="Vietnamese"
+               onclick="submitChangeLanguageForm('vi');">
+            <span class="symbol symbol-20px me-4">
+              <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
+            </span>
+              <span data-kt-element="lang-name">{% translate 'Vietnamese' %}</span>
+            </a>
+          </div>
+          <!--end::Menu item-->
+        </div>
+        <!--end::Menu-->
 
       </div>
-      <!--end::Messages-->
+      <!--end::Personal Settings-->
+
+      <!--begin::Application Settings-->
+      <div
+        class="card notice d-flex bg-light-primary rounded border-primary border border-dashed flex-shrink-0 p-3 mb-5">
+        <div class="card-title">
+          {% trans 'Application Settings' %}
+        </div>
+        <div class="card-body py-5">
+          <!--begin::Scroll-->
+          <div class="mh-450px scroll-y me-n5 pe-5">
+            <!--begin::Row-->
+            <div class="row g-2">
+              {% if perms.auth.view_group %}
+                <!--begin::Col-->
+                <div class="col-4">
+                  <a href="{% url "auth:group-list" %}"
+                     class="d-flex flex-column flex-center text-center text-gray-800 text-hover-primary bg-hover-light rounded py-4 px-3 mb-3">
+                    {% get_svg_icon 'duotune/communication/com014.svg' 'svg-icon svg-icon-2x w-25px h-25px mb-2' %}
+                    <span class="fw-semibold">{% trans 'Groups' %}</span>
+                  </a>
+                </div>
+                <!--end::Col-->
+              {% endif %}
+
+              {% if perms.sites.view_site %}
+                <!--begin::Col-->
+                <div class="col-4">
+                  <a href="{% url "settings:site" %}"
+                     class="d-flex flex-column flex-center text-center text-gray-800 text-hover-primary bg-hover-light rounded py-4 px-3 mb-3">
+                    {% get_svg_icon 'duotune/general/gen062.svg' 'svg-icon svg-icon-2x w-25px h-25px mb-2' %}
+                    <span class="fw-semibold">{% trans 'Sites' %}</span>
+                  </a>
+                </div>
+                <!--end::Col-->
+              {% endif %}
+            </div>
+            <!--end::Row-->
+          </div>
+          <!--end::Scroll-->
+        </div>
+      </div>
+      <!--end::Application Settings-->
     </div>
     <!--end::Card body-->
   </div>
