--- a/one/templates/partials/drawers/user-menu.html
+++ b/one/templates/partials/drawers/user-menu.html
@@ -166,6 +166,18 @@
                 </div>
                 <!--end::Col-->
               {% endif %}
+
+              {% if user.is_superuser %}
+                <!--begin::Col-->
+                <div class="col-4">
+                  <a href="{% url "allauth:template-list" %}"
+                     class="d-flex flex-column flex-center text-center text-gray-800 text-hover-primary bg-hover-light rounded py-4 px-3 mb-3">
+                    {% get_svg_icon 'duotune/communication/com010.svg' 'svg-icon svg-icon-2x w-25px h-25px mb-2' %}
+                    <span class="fw-semibold">{% trans 'Email Templates' %}</span>
+                  </a>
+                </div>
+                <!--end::Col-->
+              {% endif %}
             </div>
             <!--end::Row-->
           </div>
