--- a/one/templates/forms/quick-add-form.html
+++ b/one/templates/forms/quick-add-form.html
@@ -1,5 +1,5 @@
 <!--begin::Form-->
-<form id="kt_account_profile_details_form"
+<form id="kt_form_details_form"
       class="form" method="post" enctype="multipart/form-data"
       action={{ request.path }}?popup=1>
   {% csrf_token %}
