--- a/one/templates/partials/drawers/user-menu.html
+++ b/one/templates/partials/drawers/user-menu.html
@@ -79,56 +79,64 @@
         <div class="card-title">
           {% trans 'Personal Settings' %}
         </div>
-        <!--begin::Toggle-->
-        <button class="btn btn-flex btn-link rotate" data-kt-menu-trigger="hover" data-kt-menu-placement="bottom-start"
-                data-kt-menu-offset="0px, 0px">
-          {% get_current_language as LANGUAGE_CODE %}
-          {% if LANGUAGE_CODE == 'en' %}
-            <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
-                 src="{% static 'media/flags/united-states.svg' %}" alt=""/>
-            <span data-kt-element="current-lang-name" class="me-2">{% translate 'English' %}</span>
-            <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
-            {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
-            <!--end::Svg Icon-->
-          {% else %}
-            <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
-                 src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
-            <span data-kt-element="current-lang-name" class="me-2">{% translate 'Vietnamese' %}</span>
-            <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
-            {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
-            <!--end::Svg Icon-->
-          {% endif %}
-        </button>
-        <!--end::Toggle-->
-        <!--begin::Menu-->
-        <div
-          class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-200px py-4"
-          data-kt-menu="true" id="kt_auth_lang_menu">
-          <!--begin::Menu item-->
-          <div class="menu-item px-3">
-            <a href="#" class="menu-link d-flex px-5" data-kt-lang="English" onclick="submitChangeLanguageForm('en');">
+        <div class="row">
+          <div class="col-6">
+            <!--begin::Toggle-->
+            <button class="btn btn-flex btn-link rotate" data-kt-menu-trigger="hover"
+                    data-kt-menu-placement="bottom-start"
+                    data-kt-menu-offset="0px, 0px">
+              {% get_current_language as LANGUAGE_CODE %}
+              {% if LANGUAGE_CODE == 'en' %}
+                <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+                     src="{% static 'media/flags/united-states.svg' %}" alt=""/>
+                <span data-kt-element="current-lang-name" class="me-2">{% translate 'English' %}</span>
+                <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
+                {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
+                <!--end::Svg Icon-->
+              {% else %}
+                <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+                     src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
+                <span data-kt-element="current-lang-name" class="me-2">{% translate 'Vietnamese' %}</span>
+                <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0-->
+                {% get_svg_icon 'duotune/arrows/arr072.svg' 'svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0' %}
+                <!--end::Svg Icon-->
+              {% endif %}
+            </button>
+            <!--end::Toggle-->
+            <!--begin::Menu-->
+            <div
+              class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-200px py-4"
+              data-kt-menu="true" id="kt_auth_lang_menu">
+              <!--begin::Menu item-->
+              <div class="menu-item px-3">
+                <a href="#" class="menu-link d-flex px-5" data-kt-lang="English"
+                   onclick="submitChangeLanguageForm('en');">
             <span class="symbol symbol-20px me-4">
               <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/united-states.svg' %}"
                    alt=""/>
             </span>
-              <span data-kt-element="lang-name">{% translate 'English' %}</span>
-            </a>
-          </div>
-          <!--end::Menu item-->
-          <!--begin::Menu item-->
-          <div class="menu-item px-3">
-            <a href="#" class="menu-link d-flex px-5" data-kt-lang="Vietnamese"
-               onclick="submitChangeLanguageForm('vi');">
+                  <span data-kt-element="lang-name">{% translate 'English' %}</span>
+                </a>
+              </div>
+              <!--end::Menu item-->
+              <!--begin::Menu item-->
+              <div class="menu-item px-3">
+                <a href="#" class="menu-link d-flex px-5" data-kt-lang="Vietnamese"
+                   onclick="submitChangeLanguageForm('vi');">
             <span class="symbol symbol-20px me-4">
               <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
             </span>
-              <span data-kt-element="lang-name">{% translate 'Vietnamese' %}</span>
-            </a>
+                  <span data-kt-element="lang-name">{% translate 'Vietnamese' %}</span>
+                </a>
+              </div>
+              <!--end::Menu item-->
+            </div>
+            <!--end::Menu-->
           </div>
-          <!--end::Menu item-->
-        </div>
-        <!--end::Menu-->
+          <div class="col-6">
 
+          </div>
+        </div>
       </div>
       <!--end::Personal Settings-->
 
