--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -23,7 +23,7 @@
 
     <!--begin::Formsets-->
     {% for formset in formsets %}
-      {% include "forms/formset.html" %}
+      {% include "forms/formset_as_table.html"  %}
     {% endfor %}
     <!--end::Formsets-->
   </div>
