--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -23,7 +23,11 @@
 
     <!--begin::Formsets-->
     {% for formset in formsets %}
-      {% include "forms/formset_as_table.html"  %}
+      {% include "forms/formset_as_table.html" %}
+    {% endfor %}
+
+    {% for formset in formsets %}
+      {% include "forms/formset.html" %}
     {% endfor %}
     <!--end::Formsets-->
   </div>
