--- a/one/templates/forms/base.html
+++ b/one/templates/forms/base.html
@@ -12,6 +12,10 @@
     {% include 'forms/form.html' %}
     <!--end::Form-->
 
+    <!--begin::Dynamic-->
+    {% include 'forms/dynamic.html' %}
+    <!--end::Dynamic-->
+
     <!--begin::Nested Forms-->
     {% for nested_form in nested_forms %}
       <div class="separator separator-dashed separator-content border-primary my-10">
