--- a/one/templates/layout/master.html
+++ b/one/templates/layout/master.html
@@ -46,6 +46,28 @@
 
   <!--begin::Tracking-->
   <!--end::Tracking-->
+  {% block javascript %}
+    <!--begin::Global Javascript(mandatory)-->
+    {% get_global_assets 'js' as assets_js %}
+    {% for file in assets_js %}
+      <script src="{% static file %}"></script>
+    {% endfor %}
+    <!--end::Global Javascript-->
+
+    <!--begin::Vendors Javascript(optional)-->
+    {% get_vendors 'js' as vendors_js %}
+    {% for file in vendors_js %}
+      <script src="{{ file }}"></script>
+    {% endfor %}
+    <!--end::Vendors Javascript-->
+
+    <!--begin::Custom Javascript(optional)-->
+    {% get_custom_js as js %}
+    {% for file in js %}
+      <script src="{% static file %}"></script>
+    {% endfor %}
+    <!--end::Custom Javascript-->
+  {% endblock javascript %}
 </head>
 <!--end::Head-->
 
@@ -95,29 +117,8 @@
 {% block modal %}
 {% endblock modal %}
 
-{% block javascript %}
-  <!--begin::Global Javascript(mandatory)-->
-  {% get_global_assets 'js' as assets_js %}
-  {% for file in assets_js %}
-    <script src="{% static file %}"></script>
-  {% endfor %}
-  <!--end::Global Javascript-->
-
-  <!--begin::Vendors Javascript(optional)-->
-  {% get_vendors 'js' as vendors_js %}
-  {% for file in vendors_js %}
-    <script src="{{ file }}"></script>
-  {% endfor %}
-  <!--end::Vendors Javascript-->
-
-  <!--begin::Custom Javascript(optional)-->
-  {% get_custom_js as js %}
-  {% for file in js %}
-    <script src="{% static file %}"></script>
-  {% endfor %}
-  <!--end::Custom Javascript-->
-
-{% endblock javascript %}
+{% block global_javascript %}
+{% endblock global_javascript %}
 
 {% block inline_javascript %}
   {% comment %}
