Dynamic field widget

--- a/one/templates/forms/dynamic.html
+++ b/one/templates/forms/dynamic.html
@@ -4,6 +4,50 @@
       <span class="w-250px fw-bold">{% trans 'Extra Infomation' %}</span>
     </div>
     {{ field }}
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        // Initialize the editor with a JSON schema
+        var editor = new JSONEditor(document.getElementById('id_div_dynamic_wrapper'), {
+          schema: {
+            type: "object",
+            properties: {
+              make: {
+                type: "string",
+                enum: [
+                  "Toyota",
+                  "BMW",
+                  "Honda",
+                  "Ford",
+                  "Chevy",
+                  "VW"
+                ]
+              },
+              model: {
+                type: "string"
+              },
+              year: {
+                type: "integer",
+                enum: [
+                  1995, 1996, 1997, 1998, 1999,
+                  2000, 2001, 2002, 2003, 2004,
+                  2005, 2006, 2007, 2008, 2009,
+                  2010, 2011, 2012, 2013, 2014
+                ],
+                default: 2008
+              },
+              safety: {
+                type: "integer",
+                format: "rating",
+                maximum: "5",
+                exclusiveMaximum: false,
+                readonly: false
+              }
+            }
+          }
+        });
+      });
+    </script>
+
   {% else %}
   {% endif %}
 {% endfor %}
