--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -8,7 +8,7 @@
       {% include 'layout/partials/sidebar-layout/_header.html' %}
       <!--begin::Wrapper-->
       <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
-        {#        {% include 'layout/partials/sidebar-layout/_sidebar.html' %}#}
+                {% include 'layout/partials/sidebar-layout/_sidebar.html' %}
         <!--begin::Main-->
         <div class="app-main flex-column flex-row-fluid" id="kt_app_main">
           <!--begin::Content wrapper-->
