--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -38,6 +38,7 @@
 
   {#  {% include 'partials/_drawers.html' %}#}
   {% include 'partials/drawers/user-menu.html' %}
+  {% include 'partials/drawers/field-schema.html' %}
 
   {#  {% include 'layout/partials/_modals.html' %}#}
 
