--- a/one/templates/layout/partials/sidebar-layout/toolbar_action_item.html
+++ b/one/templates/layout/partials/sidebar-layout/toolbar_action_item.html
@@ -10,6 +10,8 @@
   {% if action.type == "modal" %}
   data-action-url="{{ action.url }}"
   {{ action.attributes }}
+  {% elif action.type == "drawer" %}
+  id="{{ action.url }}"
   {% else %}
   href="{{ action.url }}"
   {% endif %}
