--- a/one/templates/partials/drawers/user-menu.html
+++ b/one/templates/partials/drawers/user-menu.html
@@ -1,9 +1,13 @@
 <!--begin::Chat drawer-->
-<div id="kt_drawer_user_menu" class="bg-body" data-kt-drawer="true" data-kt-drawer-name="user-menu"
+<div id="kt_drawer_user_menu" class="bg-body"
+     data-kt-drawer="true"
+     data-kt-drawer-name="user-menu"
      data-kt-drawer-activate="true"
-     data-kt-drawer-overlay="true" data-kt-drawer-width="{default:'300px', 'md': '500px'}"
+     data-kt-drawer-overlay="true"
+     data-kt-drawer-width="{default:'300px', 'md': '500px'}"
      data-kt-drawer-direction="end"
-     data-kt-drawer-toggle="#kt_drawer_user_menu_toggle" data-kt-drawer-close="#kt_drawer_user_menu_close">
+     data-kt-drawer-toggle="#kt_drawer_user_menu_toggle"
+     data-kt-drawer-close="#kt_drawer_user_menu_close">
   <!--begin::Messenger-->
   <div class="card w-100 rounded-0 border-0" id="kt_drawer_user_menu">
     <!--begin::Card header-->
